--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.3.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
